--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,7 +46,7 @@
                       <span class="glyphicon glyphicon-send"></span>
                   <% end %>
 
-                  <%= link_to milestones_path, "data-toggle": "tooltip", "data-placement": "bottom",title: "Hitos" do %>
+                  <%= link_to milestones_report_path, "data-toggle": "tooltip", "data-placement": "bottom",title: "Hitos" do %>
                       <span class="glyphicon glyphicon-flag"></span>
                   <% end %>
 
