--- a/app/views/milestones/_report_detail.erb
+++ b/app/views/milestones/_report_detail.erb
@@ -1,6 +1,6 @@
 {"draw": <%= params[:draw] || -1 %>,
-"recordsTotal": <%= @total_objects %>,
-"recordsFiltered": <%= @total_object %>,
+"recordsTotal": <%= @recordsTotal %>,
+"recordsFiltered": <%= @recordsFiltered %>,
 "data":[
 <%  iniciado=false %>
 <% @milestone.each do |m| %>
@@ -18,7 +18,7 @@
         "tags":"<ul><% m.tags.order('LOWER(name)').each do |t| %><li><%= t.name %></li><% end %></ul>",
         "start_date":"<%= m.start_date %>",
         "due_date":"<%= m.due_date %>",
-        "mod_date":"<% if m.completed_date != nil || m.deleted_date != nil%><% if m.status != 'rejected'%><div><%= m.completed_date %></div><% else%><div><%= m.deleted_date %></div><% end %><% end %>",
+        "completed_date":"<%= m.completed_date %>",
         "actions" :"<% if can_modify_milestone? m.id %><%= raw((link_to "<span class='large-text glyphicon glyphicon-pencil'></span>".html_safe, edit_milestone_path(m)).gsub('"', "'")) %><% end %><% if current_user_admin? %><%= raw((link_to "<span class='large-text glyphicon glyphicon-trash'></span>".html_safe,  milestone_path(m),method: :delete,data: { confirm: t('milestones.delete.sure') }).gsub('"', "'")) %><%end%>"
     }
 <% end %>
