--- a/app/views/milestones/report.html.erb
+++ b/app/views/milestones/report.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <form class="row milestone-filters slide-on-click clearfix toggle-disabled">
+  <!--<form class="row milestone-filters slide-on-click clearfix toggle-disabled">-->
+  <%= form_tag({format: 'csv', method: 'post'}, {:class => 'row milestone-filters slide-on-click clearfix toggle-disabled'}) do %>
 
     <h1 class=""><span class="glyphicon glyphicon-filter"></span> <%= t('filters')%> </h1>
     <div class="form-slide">
@@ -37,13 +38,27 @@
         </div>
       </div>
       <div class="row ">
-        <div class="form-group col-xs-12">
+        <div class="form-group col-xs-2">
+          <%= label_tag :status_id, t('milestones.status'), class: "small_label" %>
+          <br>
+          <%= select_tag(:status_id, options_for_select(@status), include_blank: t('all'), :id => 'statusfilter', :multiple => false, class: "chosen", 'style'=> 'width:100%') %>
+        </div>
+        <div class="form-group col-xs-5">
+          <%= label_tag :titulo, t('milestones.title'), class: "control-label" %>
+
+          <%= text_field_tag :titulo ,nil, {class: "form-control", id:'titulofilter'} %>
+        </div>
+        <div class="form-group col-xs-3">
+          <%= button_to 'Download CSV list', milestones_report_path(format: :csv), method: :post, class: "btn btn-default pull-right" %>
           <%= button_tag t('reset'), :id => 'reset_filters',:type => 'button', class: "btn btn-default pull-right" %>
         </div>
       </div>
+
     </div>
 
-  </form>
+  <% end %>
+  <!--</form>-->
+
   <div class="row">
     <div id="container-hitos" class="table-container">
       <h1>
@@ -62,7 +77,7 @@
           <th class="tags"><%= t('milestones.tags') %></th>
           <th class="start_date" style="width: 100px" ><%= t('milestones.start_date') %></th>
           <th class="due_date" style="width: 100px"><%= t('milestones.due_date') %></th>
-          <th class="mod_date" style="width: 100px"><%= t('milestones.mod_date') %></th>
+          <th class="completed_date" style="width: 100px"><%= t('milestones.mod_date') %></th>
           <th class="actions"><%= t('milestones.actions') %></th>
         </tr>
         </thead>
