error de dashbard blanco

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <div class="table-container">
+      <div class="table-container table-difrows">
         <h1>
           <%= link_to new_collection_path do%>
               <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'>  </span>
