--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
 
-      <div class="table-container">
+      <div class="table-container table-difrows">
         <h1>
           <% if current_user_admin? %>
             <%= link_to new_project_path, method: :get do%>
