--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
 
-      <div class="table-container">
+      <div class="table-container table-difrows">
 
         <h1>
             <%= link_to new_tag_path do%>
