--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -33,11 +33,6 @@
 
         }
     }
-    tbody tr{
-        &:nth-child(2n+1) {
-            background-color: ghostwhite;
-        }
-    }
 
     .calendar{
         margin-left: 0px;
@@ -74,6 +69,14 @@
     }
 
 }
+.table-difrows {
+    tbody tr{
+        &:nth-child(2n+1) {
+            background-color: ghostwhite;
+        }
+    }
+}
+
 .table-container#container-hitos {
     margin-top: 0px;
     h1 {
