--- a/app/views/milestones/_report_detail.erb
+++ b/app/views/milestones/_report_detail.erb
@@ -10,12 +10,12 @@
     iniciado=true
     %>
     {
-        "status":"<%=raw(milestone_status(m,:static).gsub('"', "'")) %>",
+        "status":"<%=raw((milestone_highlight(m, :static) + ' ' + milestone_status(m,:static)).gsub('"', "'")) %>",
         "title":"<%= raw(link_to(m.title, milestone_path(m), method: :get).gsub(/"/, "'") )%>",
         "description":"<%= m.description.truncate(50).gsub('"', "'") %>",
         "categories": "<%= m.category.name.gsub('"', "'") %>",
         "people": "<ul><% m.people.order('LOWER(name)').each do |p| %><li><%= raw((link_to p.name, person_path(p.id), method: :get).gsub('"', "'")) %></li><% end %></ul>",
-        "tags":"<ul><% m.tags.order('LOWER(name)').each do |t| %><li><%= t.name %></li><% end %></ul>",
+        "tags":"<ul class='tags_row'><% m.tags.order('LOWER(name)').each do |t| %><li><%= t.name %></li><% end %></ul>",
         "start_date":"<%= m.start_date %>",
         "due_date":"<%= m.due_date %>",
         "completed_date":"<%= m.completed_date %>",
