--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -1,4 +1,8 @@
-
+<style>
+    body {
+      background-color: white;
+    }
+</style>
 <div class="container-fluid">
   <div class="row">
     <div class="card-col col-xs-12">
