--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -95,6 +95,31 @@
         }
     }
 }
+.timeline-filter-2{
+
+    height: 30px;
+    border-radius: 15px;
+    padding: 0 10px;
+    float: left;
+    background-color: #dddddd;
+    margin: 4px;
+
+    text-decoration: none;
+    padding: 6px;
+    border-bottom: solid 0 transparent;
+    text-align: center;
+    display: block;
+    margin-bottom: 30px;
+
+    color: #2a2a2a;
+    select{
+        border:0px;
+        outline:0px;
+        option {
+            background-color: #dddddd;
+        }
+    }
+}
 
 #profile-card {
 
