filas direrenciadas listado de usuario

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
 
-    <div class="table-container" id="people_table">
+    <div class="table-container table-difrows" id="people_table">
 
       <h1>
         <% if current_user_admin? %>
