--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -24,7 +24,7 @@
                     <h2 class="title">
                       <%=link_to e.title, e, method: :get%>
                       <% if e.category %>
-                        <small>(<%= e.category.name %>)</small>
+                          <small> <%= e.category.name %></small>
                       <% end %>
                     </h2>
                 <%else%>
@@ -37,7 +37,13 @@
                         <span class="milestone-highlight small false"></span>
                       <%end%>
                     <%end%>
-                    <strike><h2 class="title"><%=link_to e.title, e, method: :get%></h2></strike>
+
+                      <h2 class="title">
+                        <strike><%=link_to e.title, e, method: :get%></strike>
+                        <% if e.category %>
+                            <small> <%= e.category.name %></small>
+                        <% end %>
+                      </h2>
                 <%end%>
               </div>
               <div class="col-xs-2">
