Agregado el estado a las categorías

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <td></td>
             <td><%= t('categories.name') %></td>
-            <td></td>
+            <td><%= t('categories.status') %></td>
             <td></td>
 
             <% if current_user_admin? %>
