--- a/app/views/dashboard/_review_table.html.erb
+++ b/app/views/dashboard/_review_table.html.erb
@@ -9,96 +9,63 @@
 
         <div class="form-group col-xs-2">
           <%= label_tag :due_date_from, t('milestones.due_date') + ' ' + t('from'), class: "control-label" %>
-
-          <%= text_field_tag :due_date_from,nil, {class: "form-control", id:'due_date_from' ,"data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy"} %>
+          <%= text_field_tag :due_date_from,nil, {class: "form-control filter","data-provide":"datepicker",
+                                                  "data-name":"due_date_from", 'data-validation-format': "dd/mm/yyyy"} %>
         </div>
 
         <div class="form-group col-xs-2">
           <%= label_tag :due_date_to, t('to'), class: "control-label" %>
-
-          <%= text_field_tag :due_date_to,nil, {class: "form-control", id:'due_date_to' ,"data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy"} %>
+          <%= text_field_tag :due_date_to,nil, {class: "form-control filter", "data-provide":"datepicker",
+                                                "data-name":"due_date_to", 'data-validation-format': "dd/mm/yyyy"} %>
         </div>
-        <!--</div>-->
-        <!--<div class="row">-->
+
         <div class="form-group col-xs-3">
           <%= label_tag :people, t('milestones.people'), class: "small_label" %>
           <br>
-          <%= select_tag(:people, options_from_collection_for_select(@people, :name, :name), :id => 'peoplefilter', :multiple => true, class: "chosen", 'data-placeholder'=> t('milestones.select_tags'), 'style'=> 'width:100%') %>
+          <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true,
+                         class: "chosen filter full-width", "data-name":"people", 'data-placeholder'=> t('milestones.select_tags')) %>
         </div>
 
         <div class="form-group col-xs-2">
           <%= label_tag :categories, t('milestones.category'), class: "small_label" %>
           <br>
-          <%= select_tag(:categories, options_from_collection_for_select(@categories, :name, :name), include_blank: t('all'), :id => 'categoriesfilter', :multiple => false, class: "chosen", 'data-placeholder'=> t('milestones.select_tags'), 'style'=> 'width:100%') %>
+          <%= select_tag(:categories, options_from_collection_for_select(@categories, :id, :name), include_blank: t('all'),
+                         :multiple => false, class: "chosen filter full-width", "data-name":"category", 'data-placeholder'=> t('milestones.select_tags')) %>
         </div>
+
       </div>
       <div class="row ">
+
         <div class="form-group col-xs-12">
-          <%= button_tag t('reset'), :id => 'reset_filters',:type => 'button', class: "btn btn-default pull-right" %>
+          <%= button_tag t('reset'),:type => 'button', class: "btn btn-default pull-right reset-filters" %>
         </div>
+
       </div>
     </div>
 
   </form>
+
   <div class="row">
-    <div id="container-hitos" class="table-container">
+    <div class="table-container">
       <h1>
-        <%= link_to new_milestone_path do%>
-            <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'>  </span>
-        <% end %>
         <%= @review_table_header %>
       </h1>
-      <table class="table datatable table-striped" id="hitos" data-info="false">
+
+      <table class="table filter-table table-striped" data-info="false">
         <thead>
-        <tr>
-          <th class="title_row"></th>
-          <th class="title_row"><%= t('milestones.title') %></th>
-          <th id="categories"><%= t('milestones.category') %></th>
-          <th id="people"><%= t('milestones.people') %></th>
-          <th id="start_date"><%= t('milestones.start_date') %></th>
-          <th id="due_date"><%= t('milestones.due_date') %></th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <% @milestones.each do |m| %>
             <tr>
-              <td class="icon-row">
-                <%= milestone_icon(m).html_safe %>
-              </td>
-              <td class="description-row">
-                <%= link_to m.title, milestone_path(m), method: :get%>
-                <p><%= m.description.truncate(50) %></p>
-              </td>
-              <td  class="category_row" >
-                <%= m.category.name %>
-              </td>
-              <td>
-                <ul class="inline-list">
-                  <% m.people.order('LOWER(name)').each do |p| %>
-                      <li><%= link_to p.name, person_path(p.id), method: :get %></li>
-                  <% end %>
-                </ul>
-              </td>
-
-              <td>
-                <% if m.start_date != nil %>
-                    <div><%= m.start_date %></div>
-                <% end %>
-              </td>
-              <td>
-                <% if m.due_date != nil %>
-                    <div><%= m.due_date %></div>
-                <% end %>
-              </td>
-
+              <th data-name="icon"></th>
+              <th data-name="description"><%= t('milestones.title') %></th>
+              <th data-name="category"><%= t('milestones.category') %></th>
+              <th data-name="people"><%= t('milestones.people') %></th>
+              <th data-name="start_date"><%= t('milestones.start_date') %></th>
+              <th data-name="due_date"><%= t('milestones.due_date') %></th>
             </tr>
-        <% end %>
-        </tbody>
+        </thead>
       </table>
 
     </div>
   </div>
 </div>
 
-<script>$(document).ready(milestonefilters_ready);</script>
+<script>$(document).ready(datablefilters_ready);</script>
