--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@
                   <%= link_to root_path, "data-toggle": "tooltip", "data-placement": "bottom",title: "Inicio" do %>
                       <span class="glyphicon glyphicon-home"></span>
                   <% end %>
-                  <%= link_to dashboard_index_path, "data-toggle": "tooltip", "data-placement": "bottom",title: "Dashboard" do %>
+                  <%= link_to dashboard_path, "data-toggle": "tooltip", "data-placement": "bottom",title: "Dashboard" do %>
                       <span class="glyphicon glyphicon-th"></span>
                   <% end %>
 
