--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -22,6 +22,7 @@
 //= require form-validator/jquery.form-validator.min
 //= require datatables
 //= require cloudinary
+//= require datatable-filters
 //= require bootstrap-iconpicker/js/iconset-glyphicon.min
 //= require bootstrap-iconpicker/js/bootstrap-iconpicker.min
 //= require_tree .
