Agregado el activar categorías

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -29,18 +29,30 @@
               <tr>
                 <td><span class="large-text glyphicon <%= c.icon %>"></span></td>
                 <td><%= c.name %></td>
-                <td><%= c.status %></td>
                 <td><%=  I18n.t("categories.display_status.#{c.status}") %> </td>
                 <td></td>
                 <% if current_user_admin? %>
-                    <td><%= link_to edit_category_path(c) do%>
+                    <td>
+
+
+                      <%= link_to edit_category_path(c) do%>
                           <span class='large-text glyphicon glyphicon-pencil'></span>
                       <% end %>
-                    <%= link_to categories_destroy_path(category_id: c.id),
+
+                      <%= link_to categories_destroy_path(category_id: c.id),
                                     data: { confirm: t('categories.delete.sure') } do %>
 
                           <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
+
+                      <% if (c.status == "inactive") %>
+
+                          <%= link_to  category_activate_path(c.id), method: :post,  data: { confirm: "#{t('categories.activate_sure')}" } do %>
+                              <span class='large-text glyphicon glyphicon-retweet'></span>
+                          <% end %>
+
+                      <% end %>
+
                     </td>
                 <% end %>
               </tr>
