Se agrega si es de feedback en el listado de categorías

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,6 +16,7 @@
           <tr>
             <td></td>
             <td><%= t('categories.name') %></td>
+            <td><%= t('categories.feedback') %></td>
             <td><%= t('categories.status') %></td>
             <td></td>
 
@@ -29,6 +30,13 @@
               <tr>
                 <td><span class="large-text glyphicon <%= c.icon %>"></span></td>
                 <td><%= c.name %></td>
+                <td>
+                  <% if c.is_feedback %>
+                    <%= t('common.y') %>
+                  <% else %>
+                      <%= t('common.n') %>
+                  <% end %>
+                </td>
                 <td><%=  I18n.t("categories.display_status.#{c.status}") %> </td>
                 <td></td>
                 <% if current_user_admin? %>
