Se arregla la foto de la persona en el show de milestones

--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -121,7 +121,7 @@
         <div class="col-xs-3">
           <a href="<%= person_path(p) %>" class="item">
             <div class="picture">
-              <%= person_picture @image_id %>
+              <%= person_picture p.image_id %>
             </div>
             <div class="info">
               <h2><%= p.name %></h2>
