--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -30,7 +30,11 @@
                 <td>
                   <ul>
                   <% m.collection_templates.each do |c| %>
-                    <li><%= "#{c.template.title} (#{c.days})" %></li>
+                        <% if c.days %>
+                            <li><%= "#{c.template.title} (#{c.days})" %></li>
+                        <% else %>
+                            <li><%= "#{c.template.title}" %></li>
+                        <% end %>
                   <% end %>
                   </ul>
                 </td>
