--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -23,6 +23,14 @@
             <%= f.select :tech_role_id, options_from_collection_for_select(@roles, :id, :name), {}, {class: "chosen", 'data-placeholder'=> t('people.add_tech_role'), 'data-validation': 'required'}%>
           </div>
 
+          <div class="form-group">
+            <%= f.label t('people.new.skills'), class: "small_label" %>
+            <br>
+            <%= select_tag(:skills, options_from_collection_for_select(@skills, :id, :name), :multiple => true, class: "chosen", 'data-placeholder'=> t('people.add_skills'), 'style'=> 'width:100%') %>
+          </div>
+
+
+
           <div class="row">
             <div class="form-group col-xs-6">
               <%= f.label t('people.new.cellphone'), class: "control-label" %>
