--- a/app/views/milestones/_report_detail.erb
+++ b/app/views/milestones/_report_detail.erb
@@ -3,16 +3,12 @@
 "recordsFiltered": <%= @recordsFiltered %>,
 "data":[
 <%  iniciado=false %>
-<% @milestone.each do |m| %>
-    <% if iniciado %>
-        ,
-    <% end
-    iniciado=true
-    %>
+<% @milestone.each_with_index do |m,i| %>
+    <%= "," unless i == 0 %>
     {
         "status":"<%=raw((milestone_highlight(m, :static) + ' ' + milestone_status(m,:static)).gsub('"', "'")) %>",
-        "title":"<%= raw(link_to(m.title, milestone_path(m), method: :get).gsub(/"/, "'") )%>",
-        "description":"<%= m.description.truncate(50).gsub('"', "'") %>",
+        "title":"<%= raw(link_to(m.title, milestone_path(m), method: :get).gsub(/"/, "'"))%>",
+        "description":"<%= m.description.truncate(100).gsub('"', "'").gsub(/\r\n/, ' ') %>",
         "categories": "<%= m.category.name.gsub('"', "'") %>",
         "people": "<ul><% m.people.order('LOWER(name)').each do |p| %><li><%= raw((link_to p.name, person_path(p.id), method: :get).gsub('"', "'")) %></li><% end %></ul>",
         "tags":"<ul class='tags_row'><% m.tags.order('LOWER(name)').each do |t| %><li><%= t.name %></li><% end %></ul>",
