--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -11,11 +11,11 @@ function search_ready(){
         prefetch: "/people.json"
     });
 
-    var milestones = new Bloodhound({
-        datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
-        queryTokenizer: Bloodhound.tokenizers.whitespace,
-        prefetch: "/milestones.json"
-    });
+//    var milestones = new Bloodhound({
+//        datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+//        queryTokenizer: Bloodhound.tokenizers.whitespace,
+//        prefetch: "/milestones.json"
+//    });
 
     var projects = new Bloodhound({
         datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
@@ -29,9 +29,10 @@ function search_ready(){
         bloodhound.initialize(true);
     }
 
+    clearCaches(commands);
     clearCaches(projects);
     clearCaches(people);
-    clearCaches(milestones);
+//    clearCaches(milestones);
 
     $("#nav-search").typeahead({
         minLength: 1,
@@ -59,20 +60,20 @@ function search_ready(){
             }
         }
     },
-    {
-        name: 'milestones',
-        displayKey: 'name',
-        source: milestones,
-        templates: {
-            header: "<div class='search-header'>Hitos</div>",
-            suggestion: function(data) {
-                return "<div class='search-result clearfix'>" +
-                        "   <span class='glyphicon " + data.icon + "'></span>" +
-                        "   <span>" + truncate(data.name) + "</span>" +
-                        "</div>"
-            }
-        }
-    },
+//    {
+//        name: 'milestones',
+//        displayKey: 'name',
+//        source: milestones,
+//        templates: {
+//            header: "<div class='search-header'>Hitos</div>",
+//            suggestion: function(data) {
+//                return "<div class='search-result clearfix'>" +
+//                        "   <span class='glyphicon " + data.icon + "'></span>" +
+//                        "   <span>" + truncate(data.name) + "</span>" +
+//                        "</div>"
+//            }
+//        }
+//    },
     {
         name: 'projects',
         displayKey: 'name',
