Se elimina hitos del buscador

--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -11,11 +11,13 @@ function search_ready(){
         prefetch: "/people.json"
     });
 
+    /*
     var milestones = new Bloodhound({
         datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
         queryTokenizer: Bloodhound.tokenizers.whitespace,
         prefetch: "/milestones.json"
     });
+    */
 
     var projects = new Bloodhound({
         datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
@@ -31,7 +33,7 @@ function search_ready(){
 
     clearCaches(projects);
     clearCaches(people);
-    clearCaches(milestones);
+    //clearCaches(milestones);
 
     $("#nav-search").typeahead({
         minLength: 1,
@@ -59,6 +61,7 @@ function search_ready(){
             }
         }
     },
+    /*
     {
         name: 'milestones',
         displayKey: 'name',
@@ -73,6 +76,7 @@ function search_ready(){
             }
         }
     },
+    */
     {
         name: 'projects',
         displayKey: 'name',
