Se arregla el error en las tarjetas asociadas a la persona en show de milestones

--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -235,6 +235,9 @@
             clear: both;
             font-size: 10px;
             color: #3497DA;
+            
+            word-wrap: break-word;
+            width:80px;
 
         }
     }
