Se agrega separación entre los nombres de usuario en el dashboard

--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -277,7 +277,18 @@ ul.tags {
 
 ul.inline-list {
     list-style: none;
+
     li {
         display: inline;
+        margin:0 2px 0 0;
+    }
+
+    li:before {
+        content: " | ";
+    }
+
+    li:first-child:before {
+        content: none;
     }
 }
+
