--- a/app/views/technologies/new.html.erb
+++ b/app/views/technologies/new.html.erb
@@ -1,3 +1,5 @@
+<%= cloudinary_js_config %>
+
 <div class="container">
   <div class="row">
     <div class="card-col col-xs-4 col-xs-offset-4">
@@ -10,9 +12,23 @@
             <%= f.text_field :name, class: "form-control", 'data-validation': "required", :maxlength => "30"%>
           </div>
 
-          <div class="form-group">
-            <%= f.label t('icon'), class: "control-label" %>
-            <%= f.text_field :icon, class: "form-control", :maxlength => "30"%>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="progress hidden">
+                <div class="progress-bar" role="progressbar">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="form-group col-xs-6">
+              <%= f.label t('icon'), class: "control-label" %>
+              <%= f.cl_image_upload(:icon, :crop => :fill, :width => 300, :height => 300) %>
+            </div>
+            <div class="form-group col-xs-6">
+              <div class="image-preview"></div>
+            </div>
           </div>
 
           <%= f.button t('technologies.new.submit'), options= :type => 'submit', class: "btn btn-default" %>
