alfred 240 funcionamiento basico

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -160,8 +160,22 @@ ul#skills {
         display: inline-block;
         width: 14%;
 
+        border-radius: 50%;
         img {
             width: 100%;
+        }
+
+        &.plus {
+            background-color: white;
+            a {
+                color: $turqoise;
+            }
+        }
+        &.minus {
+            background-color: white;
+            a {
+                color: $turqoise;
+            }
         }
     }
 }
