--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -16,6 +16,20 @@
     <% @skills.each do |s| %>
         <li><%= image_tag s.icon %></li>
     <% end %>
+    <%if current_user_admin? %>
+        <li class="plus" >
+          <a href="add_skill_form?person_id=<%=@identifier%>" role="button">
+            <span class="glyphicon glyphicon-plus"></span>
+          </a>
+        </li>
+        <% if !@skills.empty? %>
+            <li class="minus" >
+              <a href="remove_skill_form?person_id=<%=@identifier%>" role="button">
+                <span class="glyphicon glyphicon-minus"></span>
+              </a>
+            </li>
+        <%end%>
+    <%end%>
   </ul>
   <hr>
   <h4><%= t('mentor.header') %></h4>
