Se mejora el aspecto visual del reporte de hitos

--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -279,16 +279,18 @@
 
     .description_row, .title_row{
 
-        max-width: 140px;
+        max-width: 139px;
         word-wrap:break-word;
     }
 
     .category_row{
-        max-width: 60px;
+        max-width: 85px;
+        min-width: 85px;
     }
 
     .people_row{
-        max-width: 100px;
+        max-width: 120px;
+        min-width: 120px;
     }
 
     ul.tags_row{
@@ -356,7 +358,7 @@ tfoot input {
 
 #hitos td{
     max-width:10ch;
-
+    word-wrap:break-word;
     ul:not(.tags_row){
 
 
