Cambio menor, arreglo en el rol técnico en el perfil --skip-ci

--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -11,7 +11,7 @@
     <% end %>
   <% end %>
   </h1>
-  <h2 stryle="overflow: hidden; text-overflow: ellipsis;"><%= @trole %></h2>
+  <h2 style="overflow: hidden; text-overflow: ellipsis;"><%= @trole %></h2>
   <ul id="skills">
     <% @skills.each do |s| %>
         <li><%= image_tag s.icon %></li>
